@@ -1,3 +1,8 @@
+Tue May 05 14:23:10 GMT 2015  Olly Betts <olly@survex.com>
+
+	* tests/api_wrdb.cc: Just #ifdef out the problematic part of the
+	  adddoc5 testcase for clang.
+
 Tue May 05 14:12:42 GMT 2015  Olly Betts <olly@survex.com>
 
 	* common/serialise-double.cc: Fix bug in recent fix.
